fix some style, add icon & move image location

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Fahmi Amiruddin Nafi" />
     <meta name="keywords" content="Fahmi Amiruddin Nafi" />
     <meta name="author" content="Fahmi Amiruddin Nafi" />
+    <link rel="shortcut icon" href="assets/favicon.ico" />
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css" />
     <!--Replace with your tailwind.css once created-->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
@@ -70,7 +71,7 @@
           </a>
         </div>
         <div class="block lg:hidden pr-4">
-          <button id="nav-toggle" class="flex items-center p-1 text-pink-800 hover:text-gray-900 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+          <button id="nav-toggle" class="flex items-center p-1 text-gray-800 hover:text-gray-900 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
             <svg class="fill-current h-6 w-6" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
               <title>Menu</title>
               <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
@@ -80,13 +81,13 @@
         <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-1 z-20" id="nav-content">
           <ul class="list-reset lg:flex justify-end flex-1 items-center">
             <li class="mr-3 projects">
-              <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#projects">Projects</a>
+              <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4 w-full" href="#projects">Projects</a>
             </li>
             <li class="mr-3 skills">
-              <a class="inline-block py-2 px-4 text-black no-underline" href="#skills">Skills</a>
+              <a class="inline-block py-2 px-4 text-black no-underline w-full" href="#skills">Skills</a>
             </li>
             <li class="mr-3 experience">
-              <a href="#experience" class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4">Experience</a>
+              <a href="#experience" class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4  w-full">Experience</a>
             </li>
           </ul>
           <a href="https://github.com/fahmipotlot" target="blank">
@@ -136,7 +137,7 @@
         </div>
         <!--Right Col-->
         <div class="w-full md:w-3/5 py-6 text-center">
-          <img class="w-full md:w-4/5 z-50" src="hero.png" />
+          <img class="w-full md:w-4/5 z-50" src="assets/hero.png" />
         </div>
       </div>
     </div>
@@ -181,16 +182,16 @@
 
               Preview:
 
-              <a class="text-pink-500 underline" target="_blank" href="https://drive.google.com/file/d/15WoebOFgHZONZcgme4IRLK4_aYW_oOJN/view?usp=drive_link">Learning-Hub.id</a>
+              <a class="text-green-500 skill underline" target="_blank" href="https://drive.google.com/file/d/15WoebOFgHZONZcgme4IRLK4_aYW_oOJN/view?usp=drive_link">Learning-Hub.id</a>
             </p>
           </div>
           <div class="w-full sm:w-1/2 p-6">
-            <img class="w-full sm:h-64 mx-auto" src="lh.png" />
+            <img class="w-full sm:h-64 mx-auto" src="assets/lh.png" />
           </div>
         </div>
         <div class="flex flex-wrap flex-col-reverse sm:flex-row">
           <div class="w-full sm:w-1/2 p-6 mt-6">
-            <img class="w-full sm:h-64 mx-auto" src="izora.png" />
+            <img class="w-full sm:h-64 mx-auto" src="assets/izora.png" />
           </div>
           <div class="w-full sm:w-1/2 p-6 mt-6">
             <div class="align-middle">
@@ -205,7 +206,7 @@
                 <br />
                 Preview:
 
-                <a class="text-pink-500 underline" target="_blank" href="https://drive.google.com/file/d/15WoebOFgHZONZcgme4IRLK4_aYW_oOJN/view?usp=drive_link">Izora</a>
+                <a class="text-green-500 skill underline" target="_blank" href="https://drive.google.com/file/d/15WoebOFgHZONZcgme4IRLK4_aYW_oOJN/view?usp=drive_link">Izora</a>
               </p>
             </div>
           </div>
@@ -225,16 +226,16 @@
 
               Preview:
 
-              <a class="text-pink-500 underline" target="_blank" href="https://drive.google.com/file/d/15WoebOFgHZONZcgme4IRLK4_aYW_oOJN/view?usp=drive_link">data.ngawikab.go.id</a>
+              <a class="text-green-500 skill underline" target="_blank" href="https://drive.google.com/file/d/15WoebOFgHZONZcgme4IRLK4_aYW_oOJN/view?usp=drive_link">data.ngawikab.go.id</a>
             </p>
           </div>
           <div class="w-full sm:w-1/2 p-6">
-            <img class="w-full sm:h-64 mx-auto" src="portal.png" />
+            <img class="w-full sm:h-64 mx-auto" src="assets/portal.png" />
           </div>
         </div>
         <div class="flex flex-wrap flex-col-reverse sm:flex-row">
           <div class="w-full sm:w-1/2 p-6 mt-6">
-            <img class="w-full sm:h-64 mx-auto" src="ibu.png" />
+            <img class="w-full sm:h-64 mx-auto" src="assets/ibu.png" />
           </div>
           <div class="w-full sm:w-1/2 p-6 mt-6">
             <div class="align-middle">
@@ -249,7 +250,7 @@
                 <br />
                 Preview:
 
-                <a class="text-pink-500 underline" target="_blank" href="https://drive.google.com/file/d/15WoebOFgHZONZcgme4IRLK4_aYW_oOJN/view?usp=drive_link">Ibu Hamil App</a>
+                <a class="text-green-500 skill underline" target="_blank" href="https://drive.google.com/file/d/15WoebOFgHZONZcgme4IRLK4_aYW_oOJN/view?usp=drive_link">Ibu Hamil App</a>
               </p>
             </div>
           </div>
