--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <div class="pt-24 pl-10 pr-10">
       <div class="container px-3 mx-auto flex flex-wrap flex-col md:flex-row items-center">
         <!--Left Col-->
-        <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
+        <div class="flex flex-col w-full md:w-2/5 justify-center items-start md:text-left">
           <p class="uppercase tracking-loose w-full">Hello there, My name is</p>
           <h1 class="my-4 text-5xl font-bold leading-tight">
             Fahmi Amiruddin Nafi
